'一个小说阅读器'

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no">
     <!-- <script type="text/javascript" src=""></script> -->
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>zhuibook</title>
+    <title>书海</title>
   </head>
   <body>
     <noscript>
